--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "install:all": "npm install && npm --prefix backend install && npm --prefix frontend install",
     "dev": "concurrently \"npm --prefix backend run dev\" \"npm --prefix frontend run start\"",
     "build": "npm --prefix frontend run build",
-    "build:launcher": "dotnet publish launcher/PortfolioLauncher.csproj -c Release -r win-x64 --self-contained false -p:PublishSingleFile=true -o launcher/dist",
+    "build:launcher": "powershell -NoProfile -ExecutionPolicy Bypass -File launcher/build-launcher.ps1",
     "start": "npm --prefix backend run start"
   },
   "repository": {
