--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
+    "build:pages": "ng build --configuration production --base-href /portfolio/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
