--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -13,6 +13,10 @@ concurrency:
   group: pages
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: frontend
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -29,11 +33,9 @@ jobs:
 
       - name: Install frontend dependencies
         run: npm ci
-        working-directory: frontend
 
       - name: Build Angular for Pages
         run: npm run build:pages
-        working-directory: frontend
 
       - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v4
