--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "Fullstack portfolio app (Angular + Node.js)",
-  "main": "backend/src/server.js",
+  "description": "Portfolio app (Angular)",
   "scripts": {
-    "install:all": "npm install && npm --prefix backend install && npm --prefix frontend install",
-    "dev": "concurrently \"npm --prefix backend run dev\" \"npm --prefix frontend run start\"",
+    "install:all": "npm --prefix frontend install",
+    "dev": "npm --prefix frontend run start",
     "build": "npm --prefix frontend run build",
     "build:launcher": "powershell -NoProfile -ExecutionPolicy Bypass -File launcher/build-launcher.ps1",
-    "start": "npm --prefix backend run start"
+    "start": "npm --prefix frontend run start"
   },
   "repository": {
     "type": "git",
